--- a/publications.html
+++ b/publications.html
@@ -87,6 +87,13 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
+<div><div>[28] Wong, T. E., Rennels, L., Errickson, F., Srikrishnan, V., Bakker, A., Keller, K., & Anthoff, D. (2022), 
+	<u>MimiBRICK.jl: A Julia package for the BRICK model for sea-level change in the Mimi integrated modeling framework</u>,
+	<i>Journal of Open Source Software</i>,
+	DOI: 10.21105/joss.04556.
+	<a href="https://doi.org/10.21105/joss.04556">Link</a></div></div>
+<div><br /></div>
+
 <div><div>[27] Srikrishnan, V., Lafferty, D. C., <b>Wong, T. E.</b>, Lamontagne, J. R., Quinn, J. D., Sharma, S., Molla, N. J., Herman, J. D., Sriver, R. L., Morris, J., and Lee, B. (2022), 
 	<u>Uncertainty Analysis in Multi-Sector Systems: Considerations for Risk Analysis, Projection, and Planning for Complex Systems</u>,
 	<i>Earth's Future</i>,
