--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							<p><a href="publications.html">Publications</a></p>
 							<p><a href="teaching.html">Teaching</a></p>
 							<p><a href="students.html">Students</a></p>
-							<p><a href="assets/Wong_CV_Jul2022.pdf">Reasonably current CV</a></p>
+							<p><a href="assets/Wong_CV.pdf">Reasonably current CV</a></p>
 							<p><a href="examart.html">Exam art</a></p>
 
 							<div>
@@ -182,7 +182,7 @@
           </p>
         </div>
         <div class="text-center">
-          <p class="footer">Tony Wong <span id="2020"></span></p>
+          <p class="footer">Tony Wong <span id="2022"></span></p>
         </div>
       </section>
     </body>
