--- a/publications.html
+++ b/publications.html
@@ -87,6 +87,14 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
+														
+<div><div>[29] Rennert, K.,  F. Errickson, B. C. Prest, L. Rennels, R. G. Newell, W. Pizer, C. Kingdon, J. Wingenroth, R. Cooke, B. Parthum, D. Smith, K. Cromar, D. Diaz, F. C. Moore, U. K. Müller, R. J. Plevin, A. E. Raftery, H. Ševčíková, H. Sheets, J. H. Stock, T. Tan, M. Watson, T. E. Wong & D. Anthoff (2022),
+	<u>Comprehensive Evidence Implies a Higher Social Cost of CO2</u>,
+	<i>Nature</i>,
+	DOI: 10.1038/s41586-022-05224-9.
+	<a href="https://www.nature.com/articles/s41586-022-05224-9">Link</a></div></div>
+<div><br /></div>
+
 <div><div>[28] Wong, T. E., Rennels, L., Errickson, F., Srikrishnan, V., Bakker, A., Keller, K., & Anthoff, D. (2022), 
 	<u>MimiBRICK.jl: A Julia package for the BRICK model for sea-level change in the Mimi integrated modeling framework</u>,
 	<i>Journal of Open Source Software</i>,
