--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		    <p>Mathematics is a powerful tool which enables us to answer interesting questions. 
 	In my research, I use mathematical and statistical tools to characterize uncertainty in physical models.
 	I am particularly interested in assessing how these modeling uncertainties map to uncertainty in decision-making, 
-	in settings ranging from mitigating climate risks to determining how best to split the bill when getting dinner with friends.
+	in settings such as mitigating dangerous climate risks.
 	In the classroom, I like to draw on these experiences to (hopefully!) show students that mathematics is much more than just 
 	a set of prerequisites for their other coursework. It turns out that mathematics and statistics are the foundation of... well, pretty much all of science.
 		    </p>
@@ -137,9 +137,9 @@
 	    <div class="col-sm-4">
               <!--<div style='position:relative;padding-bottom:100%;width:100%'>-->
               <div style='position:relative;padding-top:100%;width:100%;height:100%'>
-                <iframe src="./pictures/brick_logo.png" frameborder='0' scrolling='no' style='display:block;position:absolute;top:0;left:0; width:100%; height:100%;text-align:center' allowfullscreen></iframe>
+                <iframe src=https://avatars.githubusercontent.com/u/66496801?s=400&u=8e86d39201c16ae445251d3315d6ec180ed28973&v=4 frameborder='0' scrolling='no' style='display:block;position:absolute;top:0;left:0; width:100%; height:100%;text-align:center' allowfullscreen></iframe>
               </div>
-              <p class="text-center"><a href="https://github.com/scrim-network/BRICK">BRICK: Building blocks for Relevant Ice and Climate Knowledge</a></p>
+              <p class="text-center"><a href="https://github.com/raddleverse/">raddleverse: Organization for modeling climate and coastal risk and uncertainty</a></p>
             </div>
 		  
 <!--
