--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			    <section class="paddingTopped">
 				    <span class="emphText">Current semester</span><hr>
 					<p></p>
-					<p><b>Office hours:  N/A</b></p>
+					<p><b>Office hours, spring 2023: M 2-3:15, W 11-12:15</b></p>
 					<p></p>
 					<p>If you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation.</p>
 					</div>
@@ -137,7 +137,7 @@
 	    <div class="col-sm-4">
               <!--<div style='position:relative;padding-bottom:100%;width:100%'>-->
               <div style='position:relative;padding-top:100%;width:100%;height:100%'>
-                <iframe src=https://avatars.githubusercontent.com/u/66496801?s=400&u=8e86d39201c16ae445251d3315d6ec180ed28973&v=4 frameborder='0' scrolling='no' style='display:block;position:absolute;top:0;left:0; width:100%; height:100%;text-align:center' allowfullscreen></iframe>
+                <iframe src="https://avatars.githubusercontent.com/u/66496801?s=400&u=8e86d39201c16ae445251d3315d6ec180ed28973&v=4" frameborder='0' scrolling='no' style='display:block;position:absolute;top:0;left:0; width:100%; height:100%;text-align:center' allowfullscreen></iframe>
               </div>
               <p class="text-center"><a href="https://github.com/raddleverse/">raddleverse: Organization for modeling climate and coastal risk and uncertainty</a></p>
             </div>
