--- a/teaching.html
+++ b/teaching.html
@@ -37,19 +37,23 @@
 
 
 <table style="width:80%" cellpadding="3">
-  <tr height="30"> <td><b>Asst. Professor</b>, Rochester Institute of Technology</td><td>Probability and Statistics I (MATH 251)</td><td>Coming Fall 2021!</td> </tr>
+  <tr height="30"> <td><b>Asst. Professor</b>, Rochester Institute of Technology</td><td></td><td></td> </tr>
+  <tr height="30"> <td></td><td>Probability and Statistics (MATH 251)</td><td>Spring 2023</td> </tr>
+  <tr height="30"> <td></td><td>Risk Analysis with Applications in the Earth Sciences (Special Topics, MATH 589/689)</td><td>Spring 2022</td> </tr>
+  <tr height="30"> <td></td><td>Probability and Statistics I (MATH 251)</td><td>Fall 2021</td> </tr>
   <tr height="30"> <td></td><td>Stochastic Processes (MATH 505/605)</td><td>Spring 2021</td> </tr>
   <tr height="30"> <td></td><td>Probability and Statistics I (MATH 251)</td><td>Fall 2020</td> </tr>
   <tr height="30"> <td></td><td>Stochastic Processes (MATH 505/605),<BR> Climate Change: Science, Technology and Policy</td><td>Spring 2020</td> </tr>
   <tr height="30"> <td></td><td>Project-Based Calculus 1 (MATH 181)</td><td>Fall 2019</td> </tr>
-  <tr height="30"> <td><b>Instructor</b>, University of Colorado Boulder</td><td>Starting Computing (CSCI
-1300),<BR> Introduction to Data Science (CSCI 3022)</td><td>Spring 2019</td> </tr>
+  <tr height="30"> <td><b>Asst. Teaching Professor (Instructor)</b>, University of Colorado Boulder</td><td></td><td></td> </tr>
+  <tr height="30"> <td></td><td>Starting Computing (CSCI 1300),<BR> Introduction to Data Science (CSCI 3022)</td><td>Spring 2019</td> </tr>
   <tr height="30"> <td></td><td>Introduction to Data Science (CSCI 3022),<BR> Discrete Structures (CSCI 2824)</td><td>Fall 2018</td> </tr>
   <tr height="30"> <td></td><td>Introduction to Data Science (CSCI 3022)</td><td>Summer 2018</td> </tr>
   <tr height="30"> <td></td><td>Introduction to Artificial Intelligence (CSCI 3202),<BR> Discrete Structures (CSCI 2824)</td><td>Spring 2018</td> </tr>
   <tr height="30"> <td>  </td><td>Discrete Structures (CSCI 2824)</td><td>Fall 2017</td> </tr>
   <!--<tr height="30" bgcolor="lightgray"> <td><b>Instructor</b>, University of Colorado Boulder</td><td>Discrete Structures (CSCI 2824)</td><td>Fall 2017</td> </tr> -->
-  <tr height="30"> <td><b>Part-time instructor</b>, Penn State University</td><td>The Earth System (EARTH 002)</td><td>Fall 2016</td>   </tr>
+  <tr height="30"> <td><b>Part-time instructor</b>, Penn State University</td><td></td><td></td>   </tr>
+  <tr height="30"> <td></td><td>The Earth System (EARTH 002)</td><td>Fall 2016</td>   </tr>
   <tr height="30"> <td><b>Graduate part-time instructor</b>, University of Colorado Boulder</td><td>Calculus 3 for Engineers (APPM 2350)</td><td>Spring 2016</td></tr>
   <tr height="30"> <td>  </td><td>Differential Equations with Linear Algebra (APPM 2360)</td><td>Summer 2015</td></tr>
   <tr height="30"> <td>  </td><td>Calculus 2 for Engineers (APPM 1360)</td><td>Summer 2014</td></tr>
