--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		    </div>
 		    <div><br></div>
 		    <span class="mediumText">About me</span><hr>
-		    <p>Mathematics is a powerful tool which enables us to answer interesting questions. 
+		    <p>Mathematics is a powerful tool that enables us to answer interesting questions. 
 	In my research, I use mathematical and statistical tools to characterize uncertainty in physical models.
 	I am particularly interested in assessing how these modeling uncertainties map to uncertainty in decision-making, 
 	in settings such as mitigating dangerous climate risks.
@@ -64,11 +64,11 @@
 							<div>
 							<section class="paddingTopped">
 							<span class="emphText">Research interests</span><hr>
-							<p>Uncertainty in climate model projections, sea level rise in particular, can lead to suboptimal, ineffective, and - at worst - outright dangerous policy decisions. To avoid this, we must use the information we have available make the best possible policy decisions. This requires accounting for not only varying forms of uncertainty in model parameters and projections, but deep uncertainty - uncertainty in the uncertainty in model structure and parameters. Statistical calibration approaches allow us to constrain these models and characterize the uncertainties inherent in both the model and data, and are a critical part of any modeling effort.</p>
+							<p>Uncertainty in climate model projections, sea level rise in particular, can lead to suboptimal and ineffective policy decisions. Using the data we have available to make good decisions generally requires accounting for not only varying forms of uncertainty in model parameters and projections, but also deep uncertainties like uncertainty in model structure and forcing. Statistical calibration approaches allow us to constrain these models and characterize the uncertainties inherent in both the model and data, and are a critical part of any modeling effort.</p>
 
-<p>I am interested in future projections of sea-level rise and their impacts on coastal defense decision-making. This includes examining statistical model calibration techniques and extreme value statistical models.</p>
+<p>I am particularly interested in future projections of sea-level rise and their impacts on coastal defense decision-making. This includes examining statistical model calibration techniques and extreme value statistical models.</p>
 
-<p>I am also interested in educational data analytics. For example, I'm interested in both leveraging educational data in new and interesting ways to assess outcomes like student learning, retention and persistence, as well as using new and interesting educational data to assess these outcomes. These projects often involve a heavy dose of computation, which ties into a second education research interest of mine: computational literacy. Broadly speaking, this can describe how we use computation as a way to approach and solve problems, as well as communicate scientific/scholarly information within and across disciplines.</p>
+<p>I am also interested in educational data analytics and efforts to assess, promote, and enhance computational literacy. For example, I'm interested in both leveraging educational data in new and interesting ways to assess outcomes like student learning, retention and persistence, as well as using new and interesting educational data to assess these outcomes. These projects often involve a heavy dose of computation, which ties into my interest in computational literacy. Broadly speaking, this can describe how we use computation as a way to approach and solve problems, as well as communicate scientific/scholarly information within and across disciplines.</p>
 							</div>
 
 							<div>
