--- a/teaching.html
+++ b/teaching.html
@@ -37,34 +37,36 @@
 
 
 <table style="width:80%" cellpadding="3">
-  <tr height="30"> <td><b>Asst. Professor</b>, Rochester Institute of Technology</td><td></td><td></td> </tr>
-  <tr height="30"> <td></td><td>Probability and Statistics (MATH 251)</td><td>Spring 2023</td> </tr>
-  <tr height="30"> <td></td><td>Risk Analysis with Applications in the Earth Sciences (Special Topics, MATH 589/689)</td><td>Spring 2022</td> </tr>
-  <tr height="30"> <td></td><td>Probability and Statistics I (MATH 251)</td><td>Fall 2021</td> </tr>
-  <tr height="30"> <td></td><td>Stochastic Processes (MATH 505/605)</td><td>Spring 2021</td> </tr>
-  <tr height="30"> <td></td><td>Probability and Statistics I (MATH 251)</td><td>Fall 2020</td> </tr>
-  <tr height="30"> <td></td><td>Stochastic Processes (MATH 505/605),<BR> Climate Change: Science, Technology and Policy</td><td>Spring 2020</td> </tr>
-  <tr height="30"> <td></td><td>Project-Based Calculus 1 (MATH 181)</td><td>Fall 2019</td> </tr>
-  <tr height="30"> <td><b>Asst. Teaching Professor (Instructor)</b>, University of Colorado Boulder</td><td></td><td></td> </tr>
-  <tr height="30"> <td></td><td>Starting Computing (CSCI 1300),<BR> Introduction to Data Science (CSCI 3022)</td><td>Spring 2019</td> </tr>
-  <tr height="30"> <td></td><td>Introduction to Data Science (CSCI 3022),<BR> Discrete Structures (CSCI 2824)</td><td>Fall 2018</td> </tr>
-  <tr height="30"> <td></td><td>Introduction to Data Science (CSCI 3022)</td><td>Summer 2018</td> </tr>
-  <tr height="30"> <td></td><td>Introduction to Artificial Intelligence (CSCI 3202),<BR> Discrete Structures (CSCI 2824)</td><td>Spring 2018</td> </tr>
-  <tr height="30"> <td>  </td><td>Discrete Structures (CSCI 2824)</td><td>Fall 2017</td> </tr>
+  <tr height="30"> <td><b>Asst. Professor</b>, Rochester Institute of Technology</td><td>2019-present</td> </tr>
+  <tr height="30"> <td></td><td>MATH 181: Project-Based Calculus 1</td> </tr>
+  <tr height="30"> <td></td><td>MATH 251: Probability and Statistics</td> </tr>
+  <tr height="30"> <td></td><td>MATH 505/605: Stochastic Processes</td> </tr>
+  <tr height="30"> <td></td><td>MATH 589/689: ST: Risk Analysis with Applications in the Earth Sciences</td> </tr>
+  <tr height="30"> <td></td><td>Climate Change: Science, Technology and Policy (team-taught)</td> </tr>
+  <tr height="30"> <td></td><td></td> </tr>
+  <tr height="30"> <td><b>Asst. Teaching Professor (Instructor)</b>, University of Colorado Boulder</td><td>2017-2019</td> </tr>
+  <tr height="30"> <td></td><td>CSCI 1300: Starting Computing</td> </tr>
+  <tr height="30"> <td></td><td>CSCI 2824: Discrete Structures</td> </tr>
+  <tr height="30"> <td></td><td>CSCI 3022: Introduction to Data Science</td> </tr>
+  <tr height="30"> <td></td><td>CSCI 3202: Introduction to Artificial Intelligence</td> </tr>
+  <tr height="30"> <td></td><td>CSCI 4022: Advanced Data Science (created)</td> </tr>
   <!--<tr height="30" bgcolor="lightgray"> <td><b>Instructor</b>, University of Colorado Boulder</td><td>Discrete Structures (CSCI 2824)</td><td>Fall 2017</td> </tr> -->
-  <tr height="30"> <td><b>Part-time instructor</b>, Penn State University</td><td></td><td></td>   </tr>
-  <tr height="30"> <td></td><td>The Earth System (EARTH 002)</td><td>Fall 2016</td>   </tr>
-  <tr height="30"> <td><b>Graduate part-time instructor</b>, University of Colorado Boulder</td><td>Calculus 3 for Engineers (APPM 2350)</td><td>Spring 2016</td></tr>
-  <tr height="30"> <td>  </td><td>Differential Equations with Linear Algebra (APPM 2360)</td><td>Summer 2015</td></tr>
-  <tr height="30"> <td>  </td><td>Calculus 2 for Engineers (APPM 1360)</td><td>Summer 2014</td></tr>
-  <tr height="30"> <td>  </td><td>Calculus 2 for Engineers (APPM 1360)</td><td>Summer 2013</td></tr>
-  <tr height="30"> <td>  </td><td>Calculus 2 for Engineers (APPM 1360)</td><td>Summer 2012</td></tr>
-  <tr height="30"> <td><b>Lead teaching assistant</b>, University of Colorado Boulder</td><td>Dept of Applied Mathematics</td><td>Fall 2011-2012</td></tr>
-  <tr height="30"> <td><b>Graduate teaching assistant</b>, University of Colorado Boulder</td><td>Calculus 1 for Engineers (APPM 1350)</td><td>Fall 2011</td></tr>
-  <tr height="30"> <td>  </td><td>Differential Equations with Linear Algebra (APPM 2360)</td><td>Summer 2011</td></tr>
-  <tr height="30"> <td>  </td><td>Calculus 2 for Engineers (APPM 1360)</td><td>Spring 2011</td></tr>
-  <tr height="30"> <td>  </td><td>Calculus 1 for Engineers (APPM 1350)</td><td>Fall 2010</td></tr>
-  <tr height="30"> <td><b>Laboratory assistant</b>, Ohio Wesleyan University</td><td>The Astronomical Universe (ASTR 111)</td><td>Spring 2009</td></tr>
+  <tr height="30"> <td></td><td></td> </tr>
+  <tr height="30"> <td><b>Part-time instructor</b>, Penn State University</td><td>2016-2017</td>   </tr>
+  <tr height="30"> <td></td><td>EARTH 002: The Earth System</td>   </tr>
+  <tr height="30"> <td></td><td></td> </tr>
+  <tr height="30"> <td><b>Graduate part-time instructor</b>, University of Colorado Boulder</td><td>2012-2016</td></tr>
+  <tr height="30"> <td></td><td>APPM 1360: Calculus 2 for Engineers</td>   </tr>
+  <tr height="30"> <td></td><td>APPM 2350: Calculus 3 for Engineers</td>   </tr>
+  <tr height="30"> <td></td><td>APPM 2360: Differential Equations with Linear Algebra</td>   </tr>
+  <tr height="30"> <td></td><td></td> </tr>
+  <tr height="30"> <td><b>Graduate teaching assistant</b>, University of Colorado Boulder</td><td>2010-2012</td></tr>
+  <tr height="30"> <td>  </td><td>APPM 1350: Calculus 1 for Engineers</td></tr>
+  <tr height="30"> <td>  </td><td>APPM 1360: Calculus 2 for Engineers</td></tr>
+  <tr height="30"> <td>  </td><td>APPM 2360: Differential Equations with Linear Algebra</td></tr>
+  <tr height="30"> <td></td><td></td> </tr>
+  <tr height="30"> <td><b>Laboratory assistant</b>, Ohio Wesleyan University</td><td>2009</td></tr>
+  <tr height="30"> <td>  </td><td>ASTR 111: The Astronomical Universe</td></tr>
 </table>
 
             </div>
