--- a/publications.html
+++ b/publications.html
@@ -64,10 +64,6 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
-<div><div><b>Wong T.E.</b>, C. Ledna, L. Rennels, H. Sheets, F. Errickson, D. Diaz, and D. Anthoff (2021), 
-	  <u>Uncertainty in Future Sea Level Raises High-End Coastal Adaptation Costs</u>.
-	<a href="">Preprint to come</a></div></div>
-<div><br /></div>
 
 <div><div>Iniguez, J. and <b>T.E. Wong</b> (2021), 
 	<u>Plausible Bounds for Time Variations in Earth-System Sensitivity Over the Phanerozoic</u>. 
@@ -88,6 +84,13 @@
 							<span class="emphText">Published:</span><hr>
 
 														
+<div><div>[30] Wong T.E., C. Ledna, L. Rennels, H. Sheets, F. Errickson, D. Diaz, and D. Anthoff (2022), 
+	  <u>Sea Level and Socioeconomic Uncertainty Drives High-End Coastal Adaptation Costs</u>.
+	<i>Earth's Future</i>,
+	DOI: 10.1029/2022EF003061.
+	<a href="https://doi.org/10.1029/2022EF003061">Link</a></div></div>
+<div><br /></div>
+
 <div><div>[29] Rennert, K.,  F. Errickson, B. C. Prest, L. Rennels, R. G. Newell, W. Pizer, C. Kingdon, J. Wingenroth, R. Cooke, B. Parthum, D. Smith, K. Cromar, D. Diaz, F. C. Moore, U. K. Müller, R. J. Plevin, A. E. Raftery, H. Ševčíková, H. Sheets, J. H. Stock, T. Tan, M. Watson, T. E. Wong & D. Anthoff (2022),
 	<u>Comprehensive Evidence Implies a Higher Social Cost of CO2</u>,
 	<i>Nature</i>,
