--- a/students.html
+++ b/students.html
@@ -54,14 +54,19 @@ My main research interests are centered around future projections of sea-level r
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
-<p><span style="color:#461B7E;font-weight:bold">Tiana Hose, B.S. student researcher</span> using longitudinal data analysis to examine the impacts of 
-	Learning Assistants, class sizes, and other interventions on student retention, performance, and persistence (Fall 2021-)</p>
+<p><span style="color:gold;font-weight:bold">Selorm Dake, B.S. student researcher</span> Use CO2 and Temperature models to predict committed sea level rise 
+	and potential risks that arise due to it in order to assess steps that can be taken to mitigate both (Spring 2023-)</p>
 
-<p><span style="color:darkturquoise;font-weight:bold">Jaser Iniguez, M.S. student researcher</span> using paleoclimate models and proxy data to characterize
-structural uncertainty and time-variation in the Earth-system sensitivity (Summer 2021-)</p>
+<p><span style="color:blue;font-weight:bold">Kelly Feke, B.S. student researcher</span>  (Spring 2023-)</p>
+
+<p><span style="color:gold;font-weight:bold">Prasanna Ponfilio Rodrigues, M.S. student researcher</span> Using random forests to classify high-end/non-high-end
+	uncertainty in future coastal damages and adaptation costs from sea-level rise (Spring 2023-)</p>
+
+<p><span style="color:skyblue;font-weight:bold">Carolina Estevez Loza, Ph.D. student researcher</span> Using the Coastal Impacts and Adaptation Model 
+	for analyzing the impacts on adaptation decision-making, costs, and coastal damages from uncertainty in future sea levels (Spring 2023-)</p>
 
 <p><span style="color:limegreen;font-weight:bold">Meghan Childs, Ph.D. student researcher</span> data-informed stochastic modeling for the spread of 
-COVID-19 (2021-)</p>
+COVID-19 (Spring 2021-)</p>
 
 						</div>
 					</div>
@@ -74,6 +79,12 @@ COVID-19 (2021-)</p>
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Former</span><hr>
+
+<p><span style="color:#461B7E;font-weight:bold">Tiana Hose, B.S. student researcher</span> using longitudinal data analysis to examine the impacts of 
+	Learning Assistants, class sizes, and other interventions on student retention, performance, and persistence (Fall 2021-Spring 2022)</p>
+
+<p><span style="color:darkturquoise;font-weight:bold">Jaser Iniguez, M.S. student researcher</span> using paleoclimate models and proxy data to characterize
+structural uncertainty and time-variation in the Earth-system sensitivity (Summer 2021-Spring 2022)</p>
 
 <p><span style="color:firebrick;font-weight:bold">Matthew Dunham, REU student researcher</span> using Jupyter notebooks to characterize students'
 development of computational literacy in physics and mathematics (Summer 2021)</p>
