--- a/students.html
+++ b/students.html
@@ -62,7 +62,7 @@ My main research interests are centered around future projections of sea-level r
 <p><span style="color:gold;font-weight:bold">Prasanna Ponfilio Rodrigues, M.S. student researcher</span> Using random forests to classify high-end/non-high-end
 	uncertainty in future coastal damages and adaptation costs from sea-level rise (Spring 2023-)</p>
 
-<p><span style="color:skyblue;font-weight:bold">Carolina Estevez Loza, Ph.D. student researcher</span> Using the Coastal Impacts and Adaptation Model 
+<p><span style="color:lightskyblue;font-weight:bold">Carolina Estevez Loza, Ph.D. student researcher</span> Using the Coastal Impacts and Adaptation Model 
 	for analyzing the impacts on adaptation decision-making, costs, and coastal damages from uncertainty in future sea levels (Spring 2023-)</p>
 
 <p><span style="color:limegreen;font-weight:bold">Meghan Childs, Ph.D. student researcher</span> data-informed stochastic modeling for the spread of 
