--- a/publications.html
+++ b/publications.html
@@ -47,10 +47,13 @@
 						<div class="col-xs-12">
 							<span class="emphText">In preparation:</span><hr>
 
-<div><div>Wong, T.E., <b>M. Peeks</b>, and M. Cox (2021), 
+<div><div>Wong, T.E., <b>M. Peeks</b>, and M. Cox (n.d.), 
 	<u>An analysis of the class size effect in undergraduate mathematics and computer science courses</u>. 
 <div><br /></div>
 	
+<div><div><b>Childs, M.R.</b> and T.E. Wong (n.d.), 
+	<u>Assessing Parameter Sensitivity in a University Campus COVID-19 Model with Vaccinations</u>. 
+<div><br /></div>
 
 						</div>
 					</div>
@@ -64,6 +67,9 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
+<div><div><b>Tedeschi, M.</b>, <b>T.M. Hose</b>, E.K. Mehlman, S. Franklin, and T.E. Wong (n.d.), 
+	<u>Improving Models for Student Retention and Graduation using Markov Chains</u>. 
+<div><br /></div>
 
 	
 							<div><br /></div>
