--- a/publications.html
+++ b/publications.html
@@ -67,8 +67,9 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
-<div><div><b>Tedeschi, M.</b>, <b>T.M. Hose</b>, E.K. Mehlman, S. Franklin, and T.E. Wong (n.d.), 
+<div><div><b>Tedeschi, M.N.</b>, <b>T.M. Hose</b>, E.K. Mehlman, S. Franklin, and T.E. Wong (n.d.), 
 	<u>Improving Models for Student Retention and Graduation using Markov Chains</u>. 
+	<a href="https://arxiv.org/abs/2302.00464">Preprint Link</a></div></div>
 <div><br /></div>
 
 	
