--- a/publications.html
+++ b/publications.html
@@ -51,10 +51,6 @@
 	<u>An analysis of the class size effect in undergraduate mathematics and computer science courses</u>. 
 <div><br /></div>
 	
-<div><div><b>Childs, M.R.</b> and T.E. Wong (n.d.), 
-	<u>Assessing Parameter Sensitivity in a University Campus COVID-19 Model with Vaccinations</u>. 
-<div><br /></div>
-
 						</div>
 					</div>
 				</div>
@@ -87,7 +83,11 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
-														
+<div><div>[31] <b>Childs, M.R.</b> and T.E. Wong (2023), 
+	<u>Assessing Parameter Sensitivity in a University Campus COVID-19 Model with Vaccinations</u>. 
+	<i>Infectious Disease Modelling</i>, accepted.
+<div><br /></div>
+													
 <div><div>[30] Wong T.E., C. Ledna, L. Rennels, <b>H. Sheets</b>, F. Errickson, D. Diaz, and D. Anthoff (2022), 
 	  <u>Sea Level and Socioeconomic Uncertainty Drives High-End Coastal Adaptation Costs</u>.
 	<i>Earth's Future</i>,
