--- a/publications.html
+++ b/publications.html
@@ -85,7 +85,9 @@
 
 <div><div>[31] <b>Childs, M.R.</b> and T.E. Wong (2023), 
 	<u>Assessing Parameter Sensitivity in a University Campus COVID-19 Model with Vaccinations</u>. 
-	<i>Infectious Disease Modelling</i>, accepted.
+	<i>Infectious Disease Modelling</i>, 
+	DOI: 10.1016/j.idm.2023.04.002.
+	<a href="https://doi.org/10.1016/j.idm.2023.04.002">Link</a></div></div>
 <div><br /></div>
 													
 <div><div>[30] Wong T.E., C. Ledna, L. Rennels, <b>H. Sheets</b>, F. Errickson, D. Diaz, and D. Anthoff (2022), 
