--- a/publications.html
+++ b/publications.html
@@ -63,10 +63,6 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
-<div><div><b>Tedeschi, M.N.</b>, <b>T.M. Hose</b>, E.K. Mehlman, S. Franklin, and T.E. Wong (n.d.), 
-	<u>Improving Models for Student Retention and Graduation using Markov Chains</u>. 
-	<a href="https://arxiv.org/abs/2302.00464">Preprint Link</a></div></div>
-<div><br /></div>
 
 	
 							<div><br /></div>
@@ -82,6 +78,13 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
+
+<div><div>[32] <b>Tedeschi, M.N.</b>, <b>T.M. Hose</b>, E.K. Mehlman, S. Franklin, and T.E. Wong (2023), 
+	<u>Improving Models for Student Retention and Graduation using Markov Chains</u>,
+	<i>PLOS ONE</i>,
+	DOI: 10.1371/journal.pone.0287775.
+	<a href="https://arxiv.org/abs/2302.00464">Preprint Link</a></div></div>
+<div><br /></div>
 
 <div><div>[31] <b>Childs, M.R.</b> and T.E. Wong (2023), 
 	<u>Assessing Parameter Sensitivity in a University Campus COVID-19 Model with Vaccinations</u>. 
