--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,11 @@
 <div><div>Wong, T.E., <b>M. Peeks</b>, and M. Cox (n.d.), 
 	<u>An analysis of the class size effect in undergraduate mathematics and computer science courses</u>. 
 <div><br /></div>
-	
+
+<div><div><b>Feke, Kelly</b>, <b>C. Estevez Loza</b>, and T.E. Wong (n.d.), 
+	<u>Climate Model Structural Uncertainty Dominates Coastal Adaptation Costs</u>. 
+<div><br /></div>
+
 						</div>
 					</div>
 				</div>
