--- a/publications.html
+++ b/publications.html
@@ -87,7 +87,7 @@
 	<u>Improving Models for Student Retention and Graduation using Markov Chains</u>,
 	<i>PLOS ONE</i>,
 	DOI: 10.1371/journal.pone.0287775.
-	<a href="https://arxiv.org/abs/2302.00464">Preprint Link</a></div></div>
+	<a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0287775">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[31] <b>Childs, M.R.</b> and T.E. Wong (2023), 
