--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="text-center vertical-center blockRel">
 					<p><img src="./pictures/tony_wong_rit.jpeg" width=300 alt="tony" class="center"></p>
           <p class="bigText" id="name">Hi! I'm Tony</p>
-          <p class="secondHeadline" id="secondHeadline">I'm a professor in the School of Mathematical Sciences at the Rochester Institute of Technology.</p>
+          <p class="secondHeadline" id="secondHeadline">I'm a professor in the School of Mathematics and Statistics at the Rochester Institute of Technology.</p>
         </div>
       </section>
 
@@ -110,7 +110,7 @@
 							<span class="emphText">Contact information</span><hr>
 							<div>Office: GOS-2232</div>
 							<div>Email: Tony.Wong@rit.edu</div>
-							<div>School of Mathematical Sciences</div>
+							<div>School of Mathematics and Statistics</div>
 							<div>Rochester Institute of Technology</div>
 							<div>Rochester, NY 14623, USA</div>
 
