--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			    <section class="paddingTopped">
 				    <span class="emphText">Current semester</span><hr>
 					<p></p>
-					<p><b>Office hours, spring 2023: M 2-3:15, W 11-12:15</b></p>
+					<p><b>Office hours, Fall 2023: T 12:30-2, Th 2-3:30</b></p>
 					<p></p>
 					<p>If you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation.</p>
 					</div>
@@ -182,7 +182,7 @@
           </p>
         </div>
         <div class="text-center">
-          <p class="footer">Tony Wong <span id="2022"></span></p>
+          <p class="footer">Tony Wong <span id="2023"></span></p>
         </div>
       </section>
     </body>
