--- a/consulting.html
+++ b/consulting.html
@@ -11,7 +11,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
       <script src="https://cdn.rawgit.com/jusleg/updateYourYearPLZ/111cb805/updateYourYearPLZ.js"></script>
 
-      <title>Tony Wong - Publications</title>
+      <title>Tony Wong - Consulting</title>
     </head>
 
 <div class="w3-container">
@@ -64,7 +64,7 @@
           </p>
         </div>
         <div class="text-center">
-          <p class="footer">Tony Wong <span id="202-"></span></p>
+          <p class="footer">Tony Wong <span id="2023"></span></p>
         </div>
       </section>
 	</body>
