--- a/publications.html
+++ b/publications.html
@@ -67,8 +67,16 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
+<div><div> C. Darnell , L. Rennels , F.C. Errickson , T.E. Wong, V. Srikrishnan (2024), 
+	<u>Rapid decarbonization reduces but does not eliminate extreme sea level rise</u>,
+	<a href="https://osf.io/preprints/osf/j47ts">Preprint</a></div></div>
+<div><br /></div>
+							
+<div><div> T. Wong, S. Dake, and K. Feke (2024), 
+	<u>Coastal Adaptation Costs at Different Global Warming Thresholds</u>,
+	<a href="https://osf.io/preprints/osf/m97rq">Preprint</a></div></div>
+<div><br /></div>
 
-	
 							<div><br /></div>
 
 						</div>
@@ -82,6 +90,13 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
+
+<div><div>[33] Foster, M., <b>M. Dunham</b>, C. Cammarota, M. Verostek, B. Zwickl, and  T.E. Wong (2024), 
+	<u>Toward an Assessment of Students’ (Social) Computational Literacy</u>,
+	<i>International Society of the Learning Sciences Annual Meeting 2024 Proceedings (provisionally accepted)</i>,
+	Buffalo, NY.
+	<a href="">Link to come</a></div></div>
+<div><br /></div>
 
 <div><div>[32] <b>Tedeschi, M.N.</b>, <b>T.M. Hose</b>, E.K. Mehlman, S. Franklin, and T.E. Wong (2023), 
 	<u>Improving Models for Student Retention and Graduation using Markov Chains</u>,
