--- a/publications.html
+++ b/publications.html
@@ -93,9 +93,10 @@
 
 <div><div>[33] Foster, M., <b>M. Dunham</b>, C. Cammarota, M. Verostek, B. Zwickl, and  T.E. Wong (2024), 
 	<u>Toward an Assessment of Students’ (Social) Computational Literacy</u>,
-	<i>International Society of the Learning Sciences Annual Meeting 2024 Proceedings (provisionally accepted)</i>,
+	In Clarke-Midura, J., Kollar, I., Gu, X., & D'Angelo, C. (Eds.),
+	<i>Proceedings of the 17th International Conference on Computer-Supported Collaborative Learning - CSCL 2024. International Society of the Learning Sciences.</i>,
 	Buffalo, NY.
-	<a href="">Link to come</a></div></div>
+	<a href="https://2024.isls.org/proceedings/">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[32] <b>Tedeschi, M.N.</b>, <b>T.M. Hose</b>, E.K. Mehlman, S. Franklin, and T.E. Wong (2023), 
