--- a/publications.html
+++ b/publications.html
@@ -94,7 +94,7 @@
 <div><div>[33] Foster, M., <b>M. Dunham</b>, C. Cammarota, M. Verostek, B. Zwickl, and  T.E. Wong (2024), 
 	<u>Toward an Assessment of Students’ (Social) Computational Literacy</u>,
 	In Clarke-Midura, J., Kollar, I., Gu, X., & D'Angelo, C. (Eds.),
-	<i>Proceedings of the 17th International Conference on Computer-Supported Collaborative Learning - CSCL 2024. International Society of the Learning Sciences.</i>,
+	<i>Proceedings of the 17th International Conference on Computer-Supported Collaborative Learning - CSCL 2024. International Society of the Learning Sciences</i>,
 	Buffalo, NY.
 	<a href="https://2024.isls.org/proceedings/">Link</a></div></div>
 <div><br /></div>
