--- a/index.html
+++ b/index.html
@@ -64,12 +64,38 @@
 							<div>
 							<section class="paddingTopped">
 							<span class="emphText">Research interests</span><hr>
-							<p>Uncertainty in climate model projections, sea level rise in particular, can lead to suboptimal and ineffective policy decisions. Using the data we have available to make good decisions generally requires accounting for not only varying forms of uncertainty in model parameters and projections, but also deep uncertainties like uncertainty in model structure and forcing. Statistical calibration approaches allow us to constrain these models and characterize the uncertainties inherent in both the model and data, and are a critical part of any modeling effort.</p>
-
-<p>I am particularly interested in future projections of sea-level rise and their impacts on coastal defense decision-making. This includes examining statistical model calibration techniques and extreme value statistical models.</p>
-
-<p>I am also interested in educational data analytics and efforts to assess, promote, and enhance computational literacy. For example, I'm interested in both leveraging educational data in new and interesting ways to assess outcomes like student learning, retention and persistence, as well as using new and interesting educational data to assess these outcomes. These projects often involve a heavy dose of computation, which ties into my interest in computational literacy. Broadly speaking, this can describe how we use computation as a way to approach and solve problems, as well as communicate scientific/scholarly information within and across disciplines.</p>
 							</div>
+		    <p>
+		My research interests fall into two intersecting camps:  climate modeling and education research. 
+			    The two are linked by my interest in the role of computation in STEM education.
+		    </p>
+
+		    <p><b>Climate Modeling</b></p>
+		    <p>
+		Uncertainty in climate model projections, sea level rise in particular, can lead to suboptimal and ineffective policy decisions. 
+		Using the data we have available to make good decisions generally requires accounting for not only varying forms of uncertainty 
+		in model parameters and projections, but also deep uncertainties like uncertainty in model structure and forcing. Statistical 
+		calibration approaches allow us to constrain these models and characterize the uncertainties inherent in both the model and data, 
+		and are a critical part of any modeling effort.			    
+		    </p>
+		    <p>
+		I am particularly interested in future projections of sea-level rise and their impacts on coastal defense decision-making. 
+		This includes examining statistical model calibration techniques and extreme value statistical models.
+		    </p>
+		    <p></p>
+		    <p><b>Math, Stats, and STEM Education Research</b></p>
+		    <p>
+		I am also interested in educational data science and efforts to assess, promote, and enhance computational literacy. 
+		For example, I'm interested in both leveraging educational data in new and interesting ways to assess outcomes like 
+		student learning, retention, and persistence, as well as using new and interesting educational data to assess these outcomes. 
+		    </p>
+		    <p>
+		These data scientific projects often involve a heavy dose of computation, which ties into my interest in computational literacy. 
+		Broadly speaking, this can describe how we use computation as a way to approach and solve problems, as well as communicate 
+		scientific/scholarly information within and across disciplines. I am interested in research questions such as How do the 
+		computational tools that we use in math and stats courses influence students' perception of computation and its usefulness? 
+		and How do students develop their computational literacy over the course of an undergraduate mathematics degree program?
+		    </p>
 
 							<div>
 							<p><a href="https://www.researchgate.net/profile/Tony_Wong19">ResearchGate</a></p>
