--- a/publications.html
+++ b/publications.html
@@ -94,9 +94,9 @@
 <div><div>[33] Foster, M., <b>M. Dunham</b>, C. Cammarota, M. Verostek, B. Zwickl, and  T.E. Wong (2024), 
 	<u>Toward an Assessment of Students’ (Social) Computational Literacy</u>,
 	In Clarke-Midura, J., Kollar, I., Gu, X., & D'Angelo, C. (Eds.),
-	<i>Proceedings of the 17th International Conference on Computer-Supported Collaborative Learning - CSCL 2024. International Society of the Learning Sciences</i>,
-	Buffalo, NY.
-	<a href="https://2024.isls.org/proceedings/">Link</a></div></div>
+	<i>Proceedings of the 17th International Conference on Computer-Supported Collaborative Learning - CSCL 2024 (pp. 181-184). International Society of the Learning Sciences</i>,
+	Buffalo, NY, DOI: 10.22318/cscl2024.398177.
+	<a href="https://doi.org/10.22318/cscl2024.398177">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[32] <b>Tedeschi, M.N.</b>, <b>T.M. Hose</b>, E.K. Mehlman, S. Franklin, and T.E. Wong (2023), 
