--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 			    <section class="paddingTopped">
 				    <span class="emphText">Current semester</span><hr>
 					<p></p>
-					<p><b>Office hours, Spring 2024: by appointment</b></p>
+					<p><b>Office hours, Fall 2024: TBD</b></p>
 					<p></p>
-					<p>If you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation.</p>
+					<p>If you need to meet and chat outside of regularly scheduled office hours, 
+					send me an email to set something up so we can have a focused conversation.</p>
 					</div>
 							<div>
 							<section class="paddingTopped">
