--- a/students.html
+++ b/students.html
@@ -82,29 +82,19 @@ COVID-19 (Spring 2021-)</p>
 						<div class="col-xs-12">
 							<span class="emphText">Former</span><hr>
 
+<p><b>Math, Stats, and STEM Education Research</b></p>
+
 <p><span style="color:blueviolet;font-weight:bold">Jen Sundstrom, REU student researcher</span> Educational data analytics to quantify the effects of 
 	class size on student grades (Summer 2024)</p>
 
 <p><span style="color:blueviolet;font-weight:bold">Alissa Mitelman, REU student researcher</span> A framework to characterize student and faculty perceptions of computation in
 	introductory probability and statistics (Summer 2024)</p>
 
-<p><span style="color:seagreen;font-weight:bold">Dwight Dinkins, M.S. student researcher</span> Developing machine learning methods to characterize model sensitivity to 
-	interactions between parameters (Fall 2023-Spring 2024)</p>
-
 <p><span style="color:blueviolet;font-weight:bold">Rachel Suchman, REU student researchers</span> Examining the impacts of students' social/study network connectivity
 	 on grades and graduation rates (Summer 2023)</p>
 							
 <p><span style="color:blueviolet;font-weight:bold">Andrea Camacho-Betancourt and Kimberley Dorsey, REU student researchers</span> Characterizing computational literacy by
 	studying faculty perspectives and experiences using computation in their teaching and research (Summer 2023)</p>
-
-<p><span style="color:gold;font-weight:bold">Selorm Dake, B.S. student researcher</span> Use CO2 and Temperature models to predict committed sea level rise 
-	and potential risks that arise due to it in order to assess steps that can be taken to mitigate both (Spring 2023-Fall 2024)</p>
-
-<p><span style="color:blue;font-weight:bold">Kelly Feke, B.S. student researcher</span> Characterizing the impacts of model structural uncertainty on coastal
-	adaptation costs and damages (Spring 2023-Spring 2024)</p>
-
-<p><span style="color:gold;font-weight:bold">Prasanna Ponfilio Rodrigues, M.S. student researcher</span> Using random forests to classify high-end/non-high-end
-	uncertainty in future coastal damages and adaptation costs from sea-level rise (Spring 2023-Spring 2024)</p>
 
 <p><span style="color:blueviolet;font-weight:bold">Mikayla MacIntyre and Kayleigh Patterson, B.S. student researchers</span> Characterizing computational literacy by
 	studying faculty perspectives and experiences using computation in their teaching and research (Summer 2022-Fall 2022)</p>
@@ -115,20 +105,36 @@ COVID-19 (Spring 2021-)</p>
 <p><span style="color:#461B7E;font-weight:bold">Tiana Hose, B.S. student researcher</span> using longitudinal data analysis to examine the impacts of 
 	Learning Assistants, class sizes, and other interventions on student retention, performance, and persistence (Fall 2021-Spring 2022)</p>
 
-<p><span style="color:darkturquoise;font-weight:bold">Jaser Iniguez, M.S. student researcher</span> using paleoclimate models and proxy data to characterize
-structural uncertainty and time-variation in the Earth-system sensitivity (Summer 2021-Spring 2022)</p>
-
 <p><span style="color:firebrick;font-weight:bold">Matthew Dunham, REU student researcher</span> using Jupyter notebooks to characterize students'
 development of computational literacy in physics and mathematics (Summer 2021)</p>
 
 <p><span style="color:#045F5F;font-weight:bold">Mason Tedeschi, REU student researcher</span> developing stochastic models to assess retention and persistence 
 rates for underrepresented undergraduate student populations (Summer 2021)</p>
 
-<p><span style="color:#FBB917;font-weight:bold">Grayson Olin, B.S./I.E. Research Fellowship</span> evaluating the impacts of correlated sources of data
-on constraining future predictions of sea-level rise (Summer 2021)</p>
-
 <p><span style="color:tomato;font-weight:bold">Matthew Peeks, B.S. student researcher</span> using fixed effects models to examine the effects 
 of class size on student performance and teaching evaluation scores (Spring 2021)</p>
+
+<br>
+							
+<p><b>Climate Science Research</b></p>
+
+<p><span style="color:seagreen;font-weight:bold">Dwight Dinkins, M.S. student researcher</span> Developing machine learning methods to characterize model sensitivity to 
+	interactions between parameters (Fall 2023-Spring 2024)</p>
+
+<p><span style="color:gold;font-weight:bold">Selorm Dake, B.S. student researcher</span> Use CO2 and Temperature models to predict committed sea level rise 
+	and potential risks that arise due to it in order to assess steps that can be taken to mitigate both (Spring 2023-Fall 2024)</p>
+
+<p><span style="color:blue;font-weight:bold">Kelly Feke, B.S. student researcher</span> Characterizing the impacts of model structural uncertainty on coastal
+	adaptation costs and damages (Spring 2023-Spring 2024)</p>
+
+<p><span style="color:gold;font-weight:bold">Prasanna Ponfilio Rodrigues, M.S. student researcher</span> Using random forests to classify high-end/non-high-end
+	uncertainty in future coastal damages and adaptation costs from sea-level rise (Spring 2023-Spring 2024)</p>
+
+<p><span style="color:darkturquoise;font-weight:bold">Jaser Iniguez, M.S. student researcher</span> using paleoclimate models and proxy data to characterize
+structural uncertainty and time-variation in the Earth-system sensitivity (Summer 2021-Spring 2022)</p>
+
+<p><span style="color:#FBB917;font-weight:bold">Grayson Olin, B.S./I.E. Research Fellowship</span> evaluating the impacts of correlated sources of data
+on constraining future predictions of sea-level rise (Summer 2021)</p>
 
 <p><span style="color:steelblue;font-weight:bold">Alana Hough, M.S. student researcher</span> using decision trees and random forests to classify high/low-risk 
 climate states and identify key parametric uncertainties related to sea-level rise hazards (2020-2021)</p>
