--- a/publications.html
+++ b/publications.html
@@ -67,13 +67,23 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
+<div><div> C. Bundy and T. Wong (2025), 
+	<u>Analyzing Learning Assistant Influence on STEM Student Success using Logistic and Hierarchical Regression</u> (in revision, Contemporary Mathematics and Science Education), 
+	<a href=""></a></div></div>
+<div><br /></div>
+
+<div><div> M.R. Childs and T. Wong (2025), 
+	<u>Enhancing a university community COVID-19 model with Bayesian model-data fusion</u> (in revision, Mathematics in Medical and Life Sciences), 
+	<a href=""></a></div></div>
+<div><br /></div>
+
 <div><div> C. Darnell , L. Rennels , F.C. Errickson , T.E. Wong, V. Srikrishnan (2024), 
-	<u>Rapid decarbonization reduces but does not eliminate extreme sea level rise</u>,
+	<u>Rapid decarbonization reduces but does not eliminate extreme sea level rise</u> (in revision),
 	<a href="https://osf.io/preprints/osf/j47ts">Preprint</a></div></div>
 <div><br /></div>
 							
 <div><div> T. Wong, S. Dake, and K. Feke (2024), 
-	<u>Coastal Adaptation Costs at Different Global Warming Thresholds</u>,
+	<u>Coastal Adaptation Costs at Different Global Warming Thresholds</u> (in revision),
 	<a href="https://osf.io/preprints/osf/m97rq">Preprint</a></div></div>
 <div><br /></div>
 
