--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			    <section class="paddingTopped">
 				    <span class="emphText">Current semester</span><hr>
 					<p></p>
-					<p><b>Office hours, Fall 2024: Monday 10-11, Thursday 1-2:15</b></p>
+					<p><b>Office hours, Spring 2025: Monday 11:30-1, Thursday 9:30-11</b></p>
 					<p></p>
 					<p>If you need to meet and chat outside of regularly scheduled office hours, 
 					send me an email to set something up so we can have a focused conversation.</p>
