--- a/publications.html
+++ b/publications.html
@@ -67,11 +67,6 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
-<div><div> C. Bundy and T. Wong (2025), 
-	<u>Analyzing Learning Assistant Influence on STEM Student Success using Logistic and Hierarchical Regression</u> (in revision, Contemporary Mathematics and Science Education), 
-	<a href=""></a></div></div>
-<div><br /></div>
-
 <div><div> M.R. Childs and T. Wong (2025), 
 	<u>Enhancing a university community COVID-19 model with Bayesian model-data fusion</u> (in revision, Mathematics in Medical and Life Sciences), 
 	<a href=""></a></div></div>
@@ -100,6 +95,13 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
+
+<div><div>[34] <b>Bundy, C.G.</b> and T. Wong (2025), 
+	<u>Analyzing Learning Assistant Influence on STEM Student Success using Logistic and Hierarchical Regression</u>,
+	<i>(accepted) Contemporary Mathematics and Science Education)</i>,
+	DOI: tbd.
+	<a href=""></a></div></div>
+<div><br /></div>
 
 <div><div>[33] Foster, M., <b>M. Dunham</b>, C. Cammarota, M. Verostek, B. Zwickl, and  T.E. Wong (2024), 
 	<u>Toward an Assessment of Students’ (Social) Computational Literacy</u>,
