--- a/publications.html
+++ b/publications.html
@@ -67,21 +67,12 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
-<div><div> M.R. Childs and T. Wong (2025), 
-	<u>Enhancing a university community COVID-19 model with Bayesian model-data fusion</u> (in revision, Mathematics in Medical and Life Sciences), 
-	<a href=""></a></div></div>
-<div><br /></div>
 
 <div><div> C. Darnell , L. Rennels , F.C. Errickson , T.E. Wong, V. Srikrishnan (2024), 
 	<u>Rapid decarbonization reduces but does not eliminate extreme sea level rise</u> (in revision),
 	<a href="https://osf.io/preprints/osf/j47ts">Preprint</a></div></div>
 <div><br /></div>
 							
-<div><div> T. Wong, S. Dake, and K. Feke (2024), 
-	<u>Coastal Adaptation Costs at Different Global Warming Thresholds</u> (in revision),
-	<a href="https://osf.io/preprints/osf/m97rq">Preprint</a></div></div>
-<div><br /></div>
-
 							<div><br /></div>
 
 						</div>
@@ -96,11 +87,25 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
-<div><div>[34] <b>Bundy, C.G.</b> and T. Wong (2025), 
-	<u>Analyzing Learning Assistant Influence on STEM Student Success using Logistic and Hierarchical Regression</u>,
-	<i>(accepted) Contemporary Mathematics and Science Education)</i>,
-	DOI: tbd.
+<div><div>[36] M.R. Childs and T.E. Wong (2025), 
+	<u>Enhancing a university community COVID-19 model with Bayesian model-data fusion</u>,
+	(in press, Mathematics in Medical and Life Sciences), 
+	DOI: TBD.
 	<a href=""></a></div></div>
+<div><br /></div>
+
+<div><div>[35] T.E. Wong, S. Dake, K. Feke, C. Darnell, and V. Srikrishnan (2025), 
+	<u>Coastal Adaptation Costs at Different Global Warming Thresholds</u>,
+	<i>(in press) npj Natural Hazards</i>,
+	DOI: 10.1038/s44304-025-00089-0.
+	<a href="https://osf.io/preprints/osf/m97rq">Preprint</a></div></div>
+<div><br /></div>
+
+<div><div>[34] <b>Bundy, C.G.</b> and T.E. Wong (2025), 
+	<u>Analyzing Learning Assistant Influence on STEM Student Success using Logistic and Hierarchical Regression</u>,
+	<i>Contemporary Mathematics and Science Education</i>,
+	DOI: 10.30935/conmaths/15924.
+	<a href="https://doi.org/10.30935/conmaths/15924"></a></div></div>
 <div><br /></div>
 
 <div><div>[33] Foster, M., <b>M. Dunham</b>, C. Cammarota, M. Verostek, B. Zwickl, and  T.E. Wong (2024), 
