--- a/publications.html
+++ b/publications.html
@@ -90,7 +90,7 @@
 <div><div>[36] M.R. Childs and T.E. Wong (2025), 
 	<u>Enhancing a university community COVID-19 model with Bayesian model-data fusion</u>,
 	(in press, Mathematics in Medical and Life Sciences), 
-	DOI: TBD.
+	DOI: 10.1080/29937574.2025.2470242.
 	<a href=""></a></div></div>
 <div><br /></div>
 
