--- a/publications.html
+++ b/publications.html
@@ -91,7 +91,7 @@
 	<u>Enhancing a university community COVID-19 model with Bayesian model-data fusion</u>,
 	(in press, Mathematics in Medical and Life Sciences), 
 	DOI: 10.1080/29937574.2025.2470242.
-	<a href=""></a></div></div>
+	<a href="">Link TBD</a></div></div>
 <div><br /></div>
 
 <div><div>[35] T.E. Wong, S. Dake, K. Feke, C. Darnell, and V. Srikrishnan (2025), 
@@ -105,7 +105,7 @@
 	<u>Analyzing Learning Assistant Influence on STEM Student Success using Logistic and Hierarchical Regression</u>,
 	<i>Contemporary Mathematics and Science Education</i>,
 	DOI: 10.30935/conmaths/15924.
-	<a href="https://doi.org/10.30935/conmaths/15924"></a></div></div>
+	<a href="https://doi.org/10.30935/conmaths/15924">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[33] Foster, M., <b>M. Dunham</b>, C. Cammarota, M. Verostek, B. Zwickl, and  T.E. Wong (2024), 
