--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,7 @@
 							<span class="emphText">In review:</span><hr>
 
 
-<div><div> C. Darnell , L. Rennels , F.C. Errickson , T.E. Wong, V. Srikrishnan (2024), 
+<div><div> C. Darnell, L. Rennels , F.C. Errickson , T.E. Wong, V. Srikrishnan (2024), 
 	<u>Rapid decarbonization reduces but does not eliminate extreme sea level rise</u> (in revision),
 	<a href="https://osf.io/preprints/osf/j47ts">Preprint</a></div></div>
 <div><br /></div>
@@ -87,14 +87,14 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
-<div><div>[36] M.R. Childs and T.E. Wong (2025), 
+<div><div>[36] <b>M.R. Childs</b> and T.E. Wong (2025), 
 	<u>Enhancing a university community COVID-19 model with Bayesian model-data fusion</u>,
 	(in press, Mathematics in Medical and Life Sciences), 
 	DOI: 10.1080/29937574.2025.2470242.
 	<a href="">Link TBD</a></div></div>
 <div><br /></div>
 
-<div><div>[35] T.E. Wong, S. Dake, K. Feke, C. Darnell, and V. Srikrishnan (2025), 
+<div><div>[35] T.E. Wong, <b>S. Dake, K. Feke</b>, C. Darnell, and V. Srikrishnan (2025), 
 	<u>Coastal Adaptation Costs at Different Global Warming Thresholds</u>,
 	<i>(in press) npj Natural Hazards</i>,
 	DOI: 10.1038/s44304-025-00089-0.
