--- a/publications.html
+++ b/publications.html
@@ -89,7 +89,7 @@
 
 <div><div>[36] <b>M.R. Childs</b> and T.E. Wong (2025), 
 	<u>Enhancing a university community COVID-19 model with Bayesian model-data fusion</u>,
-	(in press, Mathematics in Medical and Life Sciences), 
+	<i>(in press, Mathematics in Medical and Life Sciences)</i>, 
 	DOI: 10.1080/29937574.2025.2470242.
 	<a href="">Link TBD</a></div></div>
 <div><br /></div>
