--- a/publications.html
+++ b/publications.html
@@ -87,9 +87,25 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
+<div><div>[38] M. Foster, A. Mitelman, C. Cammarota, B. Bogstad, B. Zwickl, T.E. Wong (2025), 
+	<u>Students’ Perceptions of their Professors’ Integration of Computation in their Probability and Statistics Courses</u>,
+	<i>(in press) Proceedings of the 27th Annual Conference on Research in Undergraduate Mathematics Education</i>, 
+	S. Cook (ed), Alexandria, VA, 27 Feb-1 Mar 2025,
+	DOI: TBA.
+	<a href="http://sigmaa.maa.org/rume/crume2025/058.pdf">Link</a></div></div>
+<div><br /></div>
+
+<div><div>[37] M. Foster, M.L. Reed, C. Cammarota, B. Zwickl, T.E. Wong (2025), 
+	<u>Computational Tools’ Mediation of Argumentation in Undergraduate Probability and Statistics.</u>,
+	<i>(in press) Proceedings of the 27th Annual Conference on Research in Undergraduate Mathematics Education</i>, 
+	S. Cook (ed), Alexandria, VA, 27 Feb-1 Mar 2025,
+	DOI: TBA.
+	<a href="http://sigmaa.maa.org/rume/crume2025/111.pdf">Link</a></div></div>
+<div><br /></div>
+
 <div><div>[36] <b>M.R. Childs</b> and T.E. Wong (2025), 
 	<u>Enhancing a university community COVID-19 model with Bayesian model-data fusion</u>,
-	<i>(in press, Mathematics in Medical and Life Sciences)</i>, 
+	<i>(in press) Mathematics in Medical and Life Sciences</i>, 
 	DOI: 10.1080/29937574.2025.2470242.
 	<a href="">Link TBD</a></div></div>
 <div><br /></div>
