--- a/publications.html
+++ b/publications.html
@@ -105,9 +105,9 @@
 
 <div><div>[36] <b>M.R. Childs</b> and T.E. Wong (2025), 
 	<u>Enhancing a university community COVID-19 model with Bayesian model-data fusion</u>,
-	<i>(in press) Mathematics in Medical and Life Sciences</i>, 
+	<i>Mathematics in Medical and Life Sciences</i>, 
 	DOI: 10.1080/29937574.2025.2470242.
-	<a href="">Link TBD</a></div></div>
+	<a href="https://doi.org/10.1080/29937574.2025.2470242">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[35] T.E. Wong, <b>S. Dake, K. Feke</b>, C. Darnell, and V. Srikrishnan (2025), 
