--- a/publications.html
+++ b/publications.html
@@ -112,7 +112,7 @@
 
 <div><div>[35] T.E. Wong, <b>S. Dake, K. Feke</b>, C. Darnell, and V. Srikrishnan (2025), 
 	<u>Coastal Adaptation Costs at Different Global Warming Thresholds</u>,
-	<i>(in press) npj Natural Hazards</i>,
+	<i>npj Natural Hazards</i>,
 	DOI: 10.1038/s44304-025-00089-0.
 	<a href="https://osf.io/preprints/osf/m97rq">Preprint</a></div></div>
 <div><br /></div>
