--- a/publications.html
+++ b/publications.html
@@ -87,6 +87,13 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
+<div><div>[39] C. Cammarota, M. Foster, M. Verostek, <b>K. Patterson, M. McIntyre, K. Dorsey, A. Camacho-Betancourt</b>, T.E. Wong, B. Zwickl (2025), 
+	<u>Social computational literacy in practice: a framework describing STEM researchers’ communication</u>,
+	<i>Journal of STEM Education Research</i>,
+	DOI: 10.1007/s41979-025-00155-2.
+	<a href="https://doi.org/10.1007/s41979-025-00155-2">Link</a></div></div>
+<div><br /></div>
+
 <div><div>[38] M. Foster, A. Mitelman, C. Cammarota, B. Bogstad, B. Zwickl, T.E. Wong (2025), 
 	<u>Students’ Perceptions of their Professors’ Integration of Computation in their Probability and Statistics Courses</u>,
 	<i>(in press) Proceedings of the 27th Annual Conference on Research in Undergraduate Mathematics Education</i>, 
@@ -114,7 +121,7 @@
 	<u>Coastal Adaptation Costs at Different Global Warming Thresholds</u>,
 	<i>npj Natural Hazards</i>,
 	DOI: 10.1038/s44304-025-00089-0.
-	<a href="https://osf.io/preprints/osf/m97rq">Preprint</a></div></div>
+	<a href="https://www.nature.com/articles/s44304-025-00089-0">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[34] <b>Bundy, C.G.</b> and T.E. Wong (2025), 
