--- a/publications.html
+++ b/publications.html
@@ -68,9 +68,9 @@
 							<span class="emphText">In review:</span><hr>
 
 
-<div><div> C. Darnell, L. Rennels , F.C. Errickson , T.E. Wong, V. Srikrishnan (2024), 
-	<u>Rapid decarbonization reduces but does not eliminate extreme sea level rise</u> (in revision),
-	<a href="https://osf.io/preprints/osf/j47ts">Preprint</a></div></div>
+<div><div> -, 
+	<u>-,
+	<a href="">Preprint</a></div></div>
 <div><br /></div>
 							
 							<div><br /></div>
@@ -87,6 +87,13 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
+<div><div>[40] Darnell, C., Rennels, L., Errickson, F., Wong, T., Srikrishnan, V. (2025), 
+	<u>The interplay of future emissions and geophysical uncertainties for projections of sea-level rise</u>,
+	<i>Nature Climate Change</i>,
+	DOI: 10.1038/s41558-025-02457-0.
+	<a href="https://doi.org/10.1038/s41558-025-02457-0">Link</a></div></div>
+<div><br /></div>
+							
 <div><div>[39] C. Cammarota, M. Foster, M. Verostek, <b>K. Patterson, M. McIntyre, K. Dorsey, A. Camacho-Betancourt</b>, T.E. Wong, B. Zwickl (2025), 
 	<u>Social computational literacy in practice: a framework describing STEM researchers’ communication</u>,
 	<i>Journal of STEM Education Research</i>,
