--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,13 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
+<div><div>[41] L. Ramme, B. Blanz, C. Wells, T.E. Wong, W. Schoenberg, C. Smith, and C. Li  (2025), 
+	<u>Feedback-based sea level rise impact modelling for integrated assessment models with FRISIAv1.0</u>,
+	<i>Geoscientific Model Development (accepted)</i>,
+	DOI: 10.5194/egusphere-2025-1875.
+	<a href="https://doi.org/10.5194/egusphere-2025-1875">Link</a></div></div>
+<div><br /></div>
+
 <div><div>[40] Darnell, C., Rennels, L., Errickson, F., Wong, T., Srikrishnan, V. (2025), 
 	<u>The interplay of future emissions and geophysical uncertainties for projections of sea-level rise</u>,
 	<i>Nature Climate Change</i>,
